refactor: update SecurityConfig and LogManagementController
