# backend/src/main/java/es/udc/fireproject/backend/rest/controllers/LogManagementController.java
@@ -3,8 +3,6 @@ package es.udc.fireproject.backend.rest.controllers;
 import es.udc.fireproject.backend.model.entities.logs.FireQuadrantLog;
 import es.udc.fireproject.backend.model.entities.logs.TeamQuadrantLog;
 import es.udc.fireproject.backend.model.entities.logs.VehicleQuadrantLog;
-import es.udc.fireproject.backend.model.exceptions.ExtinguishedFireException;
-import es.udc.fireproject.backend.model.exceptions.InstanceNotFoundException;
 import es.udc.fireproject.backend.model.services.logsmanagement.LogManagementService;
 import es.udc.fireproject.backend.rest.dtos.FireQuadrantLogDto;
 import es.udc.fireproject.backend.rest.dtos.GlobalStatisticsDto;
@@ -14,27 +12,21 @@ import es.udc.fireproject.backend.rest.dtos.conversors.FireQuadrantLogConversor;
 import es.udc.fireproject.backend.rest.dtos.conversors.GlobalStatisticsConversor;
 import es.udc.fireproject.backend.rest.dtos.conversors.TeamQuadrantLogConversor;
 import es.udc.fireproject.backend.rest.dtos.conversors.VehicleQuadrantLogConversor;
-import java.time.LocalDateTime;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.format.annotation.DateTimeFormat;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestAttribute;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/logs")
-public class LogManagementController {
+@RequiredArgsConstructor
+public class LogManagementController implements LogsApi {
 
-  @Autowired
-  LogManagementService logManagementService;
+  private final LogManagementService logManagementService;
 
-  @GetMapping("/fires")
-  public List<FireQuadrantLogDto> findAllFiresLogs(@RequestAttribute Long userId) {
+  @Override
+  public ResponseEntity<List<FireQuadrantLogDto>> findAllFiresLog() {
 
     List<FireQuadrantLogDto> fireQuadrantLogDtos = new ArrayList<>();
 
@@ -42,75 +34,64 @@ public class LogManagementController {
       fireQuadrantLogDtos.add(FireQuadrantLogConversor.toFireQuadrantLogDto(fireQuadrantLog));
     }
 
-    return fireQuadrantLogDtos;
+    return ResponseEntity.ok(fireQuadrantLogDtos);
   }
 
-  @GetMapping("/fires/{id}")
 
-  public List<FireQuadrantLogDto> findAllFiresLogsByFireIdAndDate(@RequestAttribute Long userId,
-      @PathVariable Long id,
-      @RequestParam(value = "startDate", required = true)
-      @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime startDate,
-      @RequestParam(value = "endDate", required = true)
-      @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime endDate)
-      throws InstanceNotFoundException {
+  @Override
+  public ResponseEntity<List<FireQuadrantLogDto>> findAllFiresLogByFireIdAndDate(Long id, LocalDate startDate,
+      LocalDate endDate) {
 
     List<FireQuadrantLogDto> fireQuadrantLogDtos = new ArrayList<>();
 
-    for (FireQuadrantLog fireQuadrantLog : logManagementService.findFiresByFireIdAndLinkedAt(id, startDate, endDate)) {
+    for (FireQuadrantLog fireQuadrantLog : logManagementService.findFiresByFireIdAndLinkedAt(id,
+        startDate.atStartOfDay(),
+        endDate.plusDays(1).atStartOfDay())) {
+
       fireQuadrantLogDtos.add(FireQuadrantLogConversor.toFireQuadrantLogDto(fireQuadrantLog));
     }
 
-    return fireQuadrantLogDtos;
+    return ResponseEntity.ok(fireQuadrantLogDtos);
   }
 
-  @GetMapping("/teams")
-  public List<TeamQuadrantLogDto> findTeamLogsByQuadrantIdBetweenDates(@RequestAttribute Long userId,
-      @RequestParam(value = "quadrantId", required = true) Integer quadrantId,
-      @RequestParam(value = "startDate", required = true)
-      @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime startDate,
-      @RequestParam(value = "endDate", required = true)
-      @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime endDate)
-
-      throws InstanceNotFoundException {
-
+  @Override
+  public ResponseEntity<List<TeamQuadrantLogDto>> findTeamLogsByQuadrantIdAndDate(Integer quadrantId,
+      LocalDate startDate, LocalDate endDate) {
     List<TeamQuadrantLogDto> teamQuadrantLogDtos = new ArrayList<>();
 
     for (TeamQuadrantLog teamQuadrantLog : logManagementService.findTeamsByQuadrantIdAndDeployAtBetweenOrderByDeployAt(
-        quadrantId, startDate, endDate)) {
+        quadrantId,
+        startDate.atStartOfDay(),
+        endDate.plusDays(1).atStartOfDay())) {
       teamQuadrantLogDtos.add(TeamQuadrantLogConversor.toTeamQuadrantLogDto(teamQuadrantLog));
     }
 
-    return teamQuadrantLogDtos;
+    return ResponseEntity.ok(teamQuadrantLogDtos);
   }
 
-  @GetMapping("/vehicles")
-  public List<VehicleQuadrantLogDto> findVehicleLogsByQuadrantIdBetweenDates(@RequestAttribute Long userId,
-      @RequestParam(value = "quadrantId", required = true) Integer quadrantId,
-      @RequestParam(value = "startDate", required = true)
-      @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime startDate,
-      @RequestParam(value = "endDate", required = true)
-      @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME) LocalDateTime endDate)
-
-      throws InstanceNotFoundException {
-
+  @Override
+  public ResponseEntity<List<VehicleQuadrantLogDto>> findVehicleLogsByQuadrantIdAndDate(Integer quadrantId,
+      LocalDate startDate, LocalDate endDate) {
     List<VehicleQuadrantLogDto> vehicleQuadrantLogDtos = new ArrayList<>();
 
     for (VehicleQuadrantLog vehicleQuadrantLog : logManagementService.findVehiclesByQuadrantIdAndDeployAtBetweenOrderByDeployAt(
-        quadrantId, startDate, endDate)) {
+        quadrantId,
+        startDate.atStartOfDay(),
+        endDate.plusDays(1).atStartOfDay())) {
+
       vehicleQuadrantLogDtos.add(VehicleQuadrantLogConversor.toVehicleQuadrantDto(vehicleQuadrantLog));
     }
 
-    return vehicleQuadrantLogDtos;
+    return ResponseEntity.ok(vehicleQuadrantLogDtos);
   }
 
-  @GetMapping("/statistics")
-  public GlobalStatisticsDto getGlobalStatistics(@RequestAttribute Long userId,
-      @RequestParam(value = "fireId", required = true) Long fireId)
-      throws InstanceNotFoundException, ExtinguishedFireException {
+  @Override
+  public ResponseEntity<GlobalStatisticsDto> getGlobalStatistics(Long fireId) {
 
-    return GlobalStatisticsConversor.toGlobalStatisticsDto(
+    GlobalStatisticsDto globalStatisticsDto = GlobalStatisticsConversor.toGlobalStatisticsDto(
         logManagementService.getGlobalStatisticsByFireId(fireId));
+
+    return ResponseEntity.ok(globalStatisticsDto);
   }
 
 
